# RouteProfile

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
profile_data/: candidate_models.json  domain_feature.json  domain_task_map.json  model_family_feature.json  model_feature_newllm.json  model_feature_standard.json  task_feature.json  upload_to_hf.py
profile_data/get_data/: get_queries_from_hf.py  merge_queries_for_few_shot.py
profile_data/result_data_graph/newllm/: task_domain_graph_full.pt  task_graph_full.pt
profile_data/result_data_graph/standard/: task_domain_graph_full.pt  task_graph_full.pt
route_data/: default_query_test.jsonl  default_query_train.jsonl  pairwise_training_data_newllm.json  pairwise_training_data_standard.json  routing_test_data.json
route_data/get_data/: get_routing_data.py
routeprofile/: __init__.py
routeprofile/build_data_graph/: __init__.py  build_query_graph.py  build_query_task_domain_graph.py  build_query_task_graph.py  build_task_domain_graph.py  build_task_graph.py  print_graph.py
routeprofile/get_model_profile/trainable/: __init__.py  trainable_gnn_profile.py
routeprofile/get_model_profile/training_free/: __init__.py  emb_gnn_profile.py  flat_profile.py  index_profile.py  text_gnn_profile.py
routeprofile/routing_evaluation/: GraphRouter.py  MLPRouter.py  SimRouter.py  __init__.py
routeprofile/scripts/: step2_build_data_graph.sh  step3a_training_free_profile.sh  step3b_trainable_profile.sh  step4_routing_evaluation.sh
tests/: conftest.py  test_build_graph.py  test_emb_gnn.py  test_imports.py  test_routers.py  test_text_gnn.py  test_trainable_gnn.py
